<resources>
    <string name="app_name">Movi_Box</string>
    <string name="btn_menu">МЕНЮ</string>
    <string name="btn_favorites">ИЗБРАННОЕ</string>
    <string name="btn_later">СМОТРЕТЬ ПОЗЖЕ</string>
    <string name="btn_selections">ПОДБОРКИ</string>
    <string name="btn_options">НАСТРОЙКИ</string>
    <string name="movieposters">Источник https://www.movieposters.com</string>
    <string name="menu_settings_title">Настройки</string>
    <string name="page_title"> Поиск</string>
    <string name="page_name">Movi Box</string>
    <string name="menu_first_title_text">ГЛАВНАЯ</string>
    <string name="menu_settings_title_text">Настройки</string>
    <string name="radio_button_popular">Популярные</string>
    <string name="radio_button_top_rated">Топ</string>
    <string name="radio_button_upcoming">Скоро</string>
    <string name="radio_button_playing">В кинотеатрах</string>
    <string name="radio_group_header">Подборка на главном экране:</string>
    <string name="permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="open">В галерею</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

</resources>